# covid_api

./: README.md  compose.yml  dump.rdb  main.py  pyproject.toml
covid_api/: asgi.py  settings.py  urls.py  wsgi.py
